# Soroperps

./: .gitignore  Cargo.toml  README.md
contracts/funding-rate/: Cargo.toml
contracts/funding-rate/src/: lib.rs  test.rs
contracts/funding-rate/test_snapshots/test/: test_apply_funding_updates_indices.1.json  test_apply_too_early.1.json  test_balanced_oi_spread_only.1.json  test_cumulative_indices_accumulate.1.json  test_long_heavy_positive_rate.1.json  test_max_rate_clamped.1.json  test_short_heavy_negative_rate.1.json  test_zero_oi_zero_rate.1.json
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: harness.rs  lib.rs  test_access_control.rs  test_edge_cases.rs  test_lifecycle.rs
contracts/integration-tests/test_snapshots/test_access_control/: test_admin_can_update_config.1.json  test_funding_set_interval_unauthorized.1.json  test_pm_double_initialize.1.json  test_pm_liquidate_position_unauthorized_caller.1.json
contracts/integration-tests/test_snapshots/test_edge_cases/: test_close_position_wrong_asset.1.json  test_deeply_underwater_liquidation.1.json  test_double_liquidation_fails.1.json  test_funding_balanced_oi.1.json  test_high_leverage_immediately_liquidatable.1.json  test_liquidate_wrong_asset.1.json  test_loss_capped_at_collateral.1.json  test_max_leverage_boundary.1.json  test_max_leverage_exactly_at_limit.1.json  test_multiple_assets.1.json  test_near_total_loss.1.json  test_open_close_same_price.1.json  test_open_position_zero_liquidity.1.json  test_open_position_zero_lp_liquidity.1.json  test_position_stores_asset.1.json  test_sequential_open_close_positions.1.json  test_set_fee_rates_too_high.1.json  test_share_price_inflation_small_first_deposit.1.json  test_small_position_minimum_collateral.1.json  test_vault_deposits_stay_consistent_after_trades.1.json
contracts/integration-tests/test_snapshots/test_lifecycle/: test_funding_rate_application.1.json  test_liquidation_full_flow.1.json  test_long_position_profit_lifecycle.1.json  test_lp_utilization_limit.1.json  test_multiple_traders_concurrent_positions.1.json  test_short_position_profit_lifecycle.1.json  test_trader_loss_goes_to_vault.1.json
contracts/liquidation-engine/: Cargo.toml
contracts/liquidation-engine/src/: lib.rs  test.rs
contracts/oracle-adapter/: Cargo.toml
contracts/oracle-adapter/src/: lib.rs  test.rs
contracts/perps-types/: Cargo.toml
contracts/perps-types/src/: lib.rs
contracts/position-manager/: Cargo.toml
contracts/position-manager/src/: lib.rs  math.rs  storage.rs  test.rs
contracts/position-manager/test_snapshots/test/: test_close_long_loss.1.json  test_close_long_profit.1.json  test_close_nonexistent_position.1.json  test_close_short_loss.1.json  test_close_short_profit.1.json  test_fee_calculation.1.json  test_multiple_positions.1.json  test_open_leverage_too_high.1.json  test_open_position_long.1.json  test_open_position_short.1.json  test_unrealized_pnl.1.json
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  shares.rs  storage.rs  test.rs
keeper/: go.mod  go.sum
keeper/cmd/api/: main.go
keeper/cmd/keeper/: main.go
keeper/deployments/: testnet.json
keeper/internal/api/: handlers.go  handlers_test.go  middleware.go  server.go  websocket.go
keeper/internal/config/: config.go  config_test.go
keeper/internal/funder/: funder.go
keeper/internal/indexer/: indexer.go
keeper/internal/liquidator/: liquidator.go
keeper/internal/models/: models.go
keeper/internal/scanner/: scanner.go  scanner_test.go
keeper/internal/stellar/: client.go  contracts.go
scripts/: deploy.sh  setup-testnet.sh
(+35 files in other folders)
