[workspace]
resolver = "2"
members = [
    "contracts/perps-types",
    "contracts/vault",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
soroban-sdk = "22.0.0"
perps-types = { path = "contracts/perps-types" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
