[workspace]
resolver = "2"
members = [
    "contracts/perps-types",
    "contracts/vault",
    "contracts/oracle-adapter",
    "contracts/position-manager",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
soroban-sdk = "22.0.0"
perps-types = { path = "contracts/perps-types" }
perps-vault = { path = "contracts/vault" }
perps-oracle-adapter = { path = "contracts/oracle-adapter" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
